@@ -8,9 +8,9 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <maven.compiler.release>21</maven.compiler.release>
+        <maven.compiler.release>17</maven.compiler.release>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <javafx.version>23.0.1</javafx.version>
+        <javafx.version>17.0.13</javafx.version>
     </properties>
 
     <dependencies>
@@ -105,17 +105,8 @@
                 <version>0.0.8</version>
                 <configuration>
                     <mainClass>Main</mainClass>
-
-                    <!-- Módulos requeridos -->
-                    <addModules>
-                        javafx.controls,javafx.graphics,javafx.fxml
-                    </addModules>
-
-                    <!-- Flags necesarios para Java 21 -->
                     <options>
-                        <option>--enable-native-access=ALL-UNNAMED</option>
-                        <option>--add-opens</option>
-                        <option>java.base/java.lang=ALL-UNNAMED</option>
+                        <option>--enable-preview</option>
                     </options>
                 </configuration>
             </plugin>
@@ -126,7 +117,10 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.13.0</version>
                 <configuration>
-                    <release>21</release>
+                    <release>17</release>
+                    <compilerArgs>
+                        <arg>--enable-preview</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
 
@@ -135,6 +129,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.2.2</version>
+                <configuration>
+                    <argLine>--enable-preview</argLine>
+                </configuration>
             </plugin>
 
         </plugins>
